<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appBiaf.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_disenadores"
        android:name="com.example.appBiaf.Fragments.ParticipantesFragment"
        android:label="@string/menu_disenadores"
        tools:layout="@layout/fragment_participantes" />

    <fragment
        android:id="@+id/nav_disenos"
        android:name="com.example.appBiaf.Fragments.SobreNosotrosFragment"
        android:label="@string/menu_diseno"
        tools:layout="@layout/fragment_sobre_nosotros" />


    <fragment
        android:id="@+id/nav_concurso"
        android:name="com.example.appBiaf.Fragments.ConcursoFragment"
        android:label="@string/menu_concurso_nav"
        tools:layout="@layout/fragment_concurso" />

    <fragment
        android:id="@+id/nav_iniciosesion"
        android:name="com.example.appBiaf.Fragments.InicioSesionFragment"
        android:label="@string/menu_iniciosesion"
        tools:layout="@layout/fragment_inicio_sesion" >
        <action
            android:id="@+id/action_nav_iniciosesion_to_nav_registro"
            app:destination="@id/nav_registro" />
        <action
            android:id="@+id/action_nav_iniciosesion_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>

    <fragment
        android:id="@+id/nav_SobreNosotros"
        android:name="com.example.appBiaf.Fragments.SobreNosotrosFragment"
        tools:layout="@layout/fragment_sobre_nosotros" />

    <fragment
        android:id="@+id/nav_registro"
        android:name="com.example.appBiaf.Fragments.RegistroFragment"
        tools:layout="@layout/fragment_registro" >
        <action
            android:id="@+id/action_nav_registro_to_nav_iniciosesion"
            app:destination="@id/nav_iniciosesion" />
        <argument
            android:name="nombre"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.appBiaf.Fragments.PerfilFragment"
        tools:layout="@layout/fragment_perfil" >
        <argument
            android:name="nombre"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_perfil_to_nav_iniciosesion"
            app:destination="@id/nav_iniciosesion" />
    </fragment>

    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.example.appBiaf.Fragments.ParticipanteFragment"
        android:label="DISEÑO"
        tools:layout="@layout/fragment_participante" />

    <fragment
        android:id="@+id/nav_votacion"
        android:name="com.example.appBiaf.Fragments.VotacionFragment"
        android:label="Votación"
        tools:layout="@layout/fragment_votacion" />
</navigation>